--- a/SalamatKoodak/Views/Personels/Index.cshtml
+++ b/SalamatKoodak/Views/Personels/Index.cshtml
@@ -222,7 +222,7 @@
 
 
 </div>
-<div class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="myModal" role="dialog"  style="height:auto;overflow-y:visible" >
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header text-center">
